--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -171,7 +171,7 @@ research to take, required staff and other resources, and anything else you thin
     
        University of Awesome motto: 
       <q>Be awesome to each other.</q> --
-      <cite>The memoirs of Bill S Preston, <abbr title="Esquire"></abbr>Esq</cite>,
+      <cite>The memoirs of Bill S Preston, <abbr title="Esquire"></abbr>Esq</cite>
 <br>
 <br>
 <br>
