--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             tag of the nav. Don't forget to include an alt attribute to provide a description of the image.-->'
             
             <nav>
-                <img class="picture" 
-                src="patricia-frost-125-edited-medium.jpg" 
+                <img class="fig-1"
+                src=""
                 alt="Patricia-Frost">
                 
                 <ul>
